Bug 545550: In setters for base values of SVG attributes, only set mAnimVal if we're not currently being animated. r=jwatt